# rust-crypto-core

./: .gitignore  Cargo.toml
blockchains/aptos/: Cargo.toml
blockchains/aptos/src/: error.rs  lib.rs  parser.rs
blockchains/aptos/src/aptos_type/: account_address.rs  chain_id.rs  identifier.rs  language_storage.rs  mod.rs  parser.rs  safe_serialize.rs  script.rs  transaction_argument.rs  value.rs
blockchains/arweave/: Cargo.toml
blockchains/arweave/src/: lib.rs
blockchains/arweave/src/types/: error.rs  hash.rs  mod.rs  transaction.rs
blockchains/bitcoin/: Cargo.toml
blockchains/bitcoin/src/: error.rs  lib.rs  xyzpub.rs
blockchains/cardano/: Cargo.toml
blockchains/cardano/src/: address.rs  detail.rs  errors.rs  lib.rs  macros.rs  overview.rs  structs.rs  transaction.rs
blockchains/cosmos/: Cargo.toml
blockchains/cosmos/src/: error.rs  lib.rs
blockchains/cosmos/src/proto_wrapper/: auth_info.rs  body.rs  fee.rs  mod.rs  mode_info.rs  serde_helper.rs  sign_doc.rs  signer_info.rs
blockchains/cosmos/src/proto_wrapper/msg/: base.rs  common.rs  mod.rs  msg.rs  msg_serialize.rs
blockchains/near/: Cargo.toml
blockchains/near/primitives/account-id/: Cargo.toml
blockchains/near/primitives/account-id/src/: lib.rs
blockchains/near/primitives/crypto/: Cargo.toml
blockchains/near/primitives/primitives/: Cargo.toml
blockchains/near/primitives/primitives-core/: Cargo.toml
blockchains/near/primitives/primitives-core/src/: lib.rs
blockchains/near/primitives/primitives/src/: lib.rs  test_utils.rs  transaction.rs  types.rs
blockchains/near/src/: error.rs  lib.rs  parser.rs  primitives.rs
blockchains/near/src/primitives/: transaction.rs  types.rs
blockchains/near/src/types/: mod.rs  parser.rs  primitives.rs
blockchains/polkadot/: .gitignore  Cargo.toml  README.MD
blockchains/polkadot/db_handling/src/: db_transactions.rs  error.rs  identities.rs
blockchains/polkadot/definitions/src/: navigation.rs
blockchains/polkadot/generate_message/tests/: load_metadata.rs
blockchains/polkadot/rcc_polkadot/: Cargo.toml
blockchains/polkadot/rcc_polkadot/database/: db  snap.000000000000478C
blockchains/polkadot/rcc_polkadot/database/blobs/: 18300
blockchains/polkadot/rcc_polkadot/src/: lib.rs  scanner.rs  traits.rs  wrapped_card.rs  wrapped_transaction_action.rs  wrapped_transaction_card.rs  wrapped_transaction_card_set.rs
blockchains/polkadot/rcc_polkadot/test_data/database_origin/: db
blockchains/polkadot/signer/: Cargo.toml  build.rs
blockchains/polkadot/signer/src/: lib.rs
blockchains/polkadot/src/: lib.rs  scanner.rs  transaction_parser.rs  wrapped_transaction_action.rs
blockchains/polkadot/test_data/: metadata_polkadot_v9270
blockchains/polkadot/test_data/transactions/: transfer
blockchains/polkadot/transaction_parsing/src/: load_metadata.rs
blockchains/solana/: Cargo.toml
blockchains/solana/src/: compact.rs  error.rs  instruction.rs  lib.rs  message.rs
blockchains/solana/src/resolvers/: mod.rs  stake.rs  system.rs  token.rs  token_lending.rs  token_swap_v3.rs  vote.rs
blockchains/solana/src/solana_lib/: mod.rs  solana_program.rs
blockchains/solana/src/solana_lib/solana_program/: mod.rs  program_option.rs  program_pack.rs  stake.rs  system_instruction.rs  vote.rs
blockchains/solana/src/solana_lib/spl/: mod.rs  token.rs  token_lending.rs  token_swap.rs
blockchains/solana/src/solana_lib/spl/token_swap/: mod.rs
blockchains/solana/src/solana_lib/spl/token_swap/curve/: base.rs  calculator.rs  constant_price.rs  constant_product.rs  fees.rs  mod.rs  offset.rs  stable.rs
blockchains/solana/src/types/: compact.rs  instruction.rs  message.rs  mod.rs
blockchains/solana/src/types/resolvers/: mod.rs  stake.rs  system.rs  token.rs  token_lending.rs  token_swap.rs  token_swap_v3.rs  vote.rs
blockchains/sui/: Cargo.toml
blockchains/sui/src/: app.rs  errors.rs  lib.rs
libs/blockchains/solana/: Cargo.toml
libs/blockchains/solana/src/: error.rs  lib.rs
libs/blockchains/solana/src/types/: compact.rs  message.rs  mod.rs  read.rs
libs/traits/chain/: Cargo.toml
libs/traits/chain/src/: lib.rs
signer/: Cargo.toml  Makefile  README.md
signer/.cargo/: config-bk
signer/clib/: println.c  println.h
signer/src/: error.rs  lib.rs  my_alloc.rs  wrapper.h
signer/src/algorithm/: bip32_ed25519.rs  error.rs  mod.rs  rsa.rs  secp256k1.rs
signer/src/keymaster/: hash_wraper.rs  local.rs  mod.rs
signer/src/keymaster/se/: command.rs  mod.rs  serial_manager.rs  tags.rs  tvl.rs
signer/src/keymaster/se/key_derivation/: bip32_ed25519.rs  mod.rs  slip10.rs  suri.rs
signer/src/keystore/: keystore_file.rs  mod.rs
traits/chain/: Cargo.toml
traits/chain/src/: lib.rs
