[package]
name = "rcc_signer"
version = "0.1.1"
edition = "2021"
license = "Apache-2.0"
description = "signer rust implemenation for general purpose"
repository = "https://github.com/KeystoneHQ/rust-crypto-core/tree/master/signer"
readme = "README.md"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serialport = "4.1.0"
hex = "0.4.3"
thiserror="1.0"
bytes = "1"
indexmap = "1.8.1"
k256 = {version = "0.11.3", features=["ecdsa", "keccak256"] }
bs58="0.4.0"
zeroize="1.1.0"
rsa="0.7.0"
ring = {version = "0.16.20", features = [ "std" ] }
rand_chacha = "0.3.1"
sha2 = "0.9"
base64="0.3.1"

[profile.test]
opt-level=3