[package]
name = "rcc_signer"
version = "0.1.1"
edition = "2021"
license = "Apache-2.0"
description = "signer rust implemenation for general purpose"
repository = "https://github.com/KeystoneHQ/rust-crypto-core/tree/master/signer"
readme = "README.md"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
name = "embeded_rust"
crate-type = ["staticlib"]      # 生成动态链接库


[target.'cfg(android)'.dependencies]
serialport = "4.1.0"
indexmap = "1.8.1"


[dependencies]
hex = { version = "0.4", default-features = false, features= ["alloc"] }
thiserror-no-std="2.0.2"
bytes = { version = "1", default-features = false }
k256 = {version = "0.11.3", default-features = false, features=["ecdsa", "keccak256"] }
bs58= { version = "0.4.0", default-features = false }
zeroize="1.1.0"
alloc-cortex-m="0.4.3"
cstr_core="0.2.6"