[package]
name = "rcc-bitcoin"
version = "0.0.1"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bitcoin = { verison = "0.29.2", default-features = false, features = ["no-std"] }
xyzpub = "0.3.0"
thiserror-no-std = "2.0.2"
