[package]
name = "rcc-bitcoin"
version = "0.0.1"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[dependencies.bitcoin]
version = "0.29.2"
default-features = false
features = ["no-std"]

[dependencies.thiserror-no-std]
version = "2.0.2"
