[package]
name = "rcc-near"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rcc-trait-chain = { path = "../../traits/chain" }
hex = "0.4.3"
near-primitives = { path = "primitives/primitives" }
serde_json = "1.0"
serde = "1.0.139"
thiserror = "1.0.31"