[package]
name = "rcc-near"
version = "0.1.0"
edition = "2021"
license = "Apache-2.0"
description = "A transaction parser for near."
# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rcc-trait-chain = "0.1.0"
hex = "0.4.3"
serde_json = "1.0"
serde = "1.0.139"
thiserror = "1.0.31"
byteorder = "1.3"
bytesize = "1.1"
cfg-if = "1.0.0"
chrono = { version = "0.4.4", features = ["serde"] }
deepsize = { version = "0.2.0", features = ["chrono"], optional = true }
derive_more = "0.99.3"
easy-ext = "0.2"
num-rational = { version = "0.3", features = ["serde"] }
once_cell = "1.5.2"
primitive-types = { version = "0.10", default-features = false }
rand = "0.7"
reed-solomon-erasure = "4"
smart-default = "0.6"
strum = "0.24"
borsh = { version = "0.9", features = ["rc"] }
near-primitives-core = "0.14.0"
near-crypto = "0.14.0"