[package]
name = "rcc-near"
version = "0.1.0"
edition = "2021"
license = "Apache-2.0"
description = "A transaction parser for near."
# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rcc-trait-chain = "0.1.0"
hex = "0.4.3"
serde_json = "1.0"
serde = "1.0.139"
thiserror = "1.0.31"
derive_more = "0.99.3"
primitive-types = { version = "0.10", default-features = false }
strum = "0.24"
borsh = { version = "0.9", features = ["rc"] }
near-primitives-core = "0.14.0"
near-crypto = "0.14.0"