[package]
name = "rcc_polkadot"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde_json = "1.0"
parity-scale-codec = "3.1.5"
hex = "0.4.3"
qr_reader_phone = {git = "https://github.com/KeystoneHQ/parity-signer", tag = "keystone-patch@0.1.0"}
transaction_parsing = {git = "https://github.com/KeystoneHQ/parity-signer", tag = "keystone-patch@0.1.0"}
transaction_signing = {git = "https://github.com/KeystoneHQ/parity-signer", tag = "keystone-patch@0.1.0"}
definitions = {git = "https://github.com/KeystoneHQ/parity-signer", tag = "keystone-patch@0.1.0"}
db_handling = {git = "https://github.com/KeystoneHQ/parity-signer", tag = "keystone-patch@0.1.0"}
generate_message = {git = "https://github.com/KeystoneHQ/parity-signer", tag = "keystone-patch@0.1.0"}

[dev-dependencies]
fs_extra = "1.2.0"
