[package]
name = "rcc-solana"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bs58 = "0.4.0"
serde_json = "1.0"
serde = "1.0.139"
hex = "0.4.3"
solana-vote-program = "1.11.2"
solana-program = "1.11.2"
solana-stake-program = "1.11.2"
solana-sdk = "1.11.3"
spl-token = "3.3.0"
spl-token-swap = "3.0.0"
spl-token-lending = "0.2.0"
rcc-trait-chain = { path = "../../traits/chain" }
thiserror = "1.0.31"