[package]
name = "rcc-solana"
version = "0.1.1"
edition = "2021"
license = "Apache-2.0"
description = "A transaction parser for solana."

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bs58 = "0.4.0"
serde_json = "1.0"
serde = "1.0.139"
hex = "0.4.3"
solana-vote-program = "1.11.2"
solana-program = "1.11.2"
solana-stake-program = "1.11.2"
spl-token = "3.3.0"
spl-token-swap = "3.0.0"
spl-token-lending = "0.2.0"
rcc-trait-chain = "0.1.0"
thiserror = "1.0.31"