[package]
name = "rcc-solana"
version = "0.2.0"
edition = "2021"
license = "Apache-2.0"
description = "A transaction parser for solana."

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bs58 = "0.4.0"
serde_json = "1.0"
serde = "1.0.139"
hex = "0.4.3"
rcc-trait-chain = "0.1.0"
thiserror = "1.0.31"
bincode = "1.3.3"
num-derive = "0.3.3"
serde_derive = "1.0.141"
uint = "0.9.3"
arrayref = "0.3.6"
