cargo-features = ["profile-rustflags"]

[package]
name = "rcc_sui"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bcs = {git = "https://github.com/KeystoneHQ/bcs.git", tag = "0.1.1"}
thiserror = { version = "1.0", package = "thiserror-core", default-features = false }
sui-types = { git = "https://github.com/KeystoneHQ/sui.git", tag = "0.1.1", package = "sui-types" }

[dev-dependencies]
hex = "0.4.1"
serde_json = "1"
