[package]
name = "signer"
version = "0.1.0"
authors = ["debris <marek.kotewicz@gmail.com>"]
edition = "2018"

[dependencies]
anyhow = "1.0"


db_handling = { path = "../db_handling", default-features = false, features = ["signer"] }
qr_reader_phone = { path = "../qr_reader_phone" }

[target.'cfg(not(target_os = "android"))'.dependencies]
env_logger = "0.9"

[target.'cfg(target_os = "android")'.dependencies]
android_logger = "0.11"
log = "0.4.17"

[build-dependencies]
definitions = {path = "../definitions"}
generate_message = {path = "../generate_message"}

