[package]
name = "solana"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bs58 = "0.4.0"
serde_json = "1.0"
hex = "0.4.3"
solana-vote-program = "1.11.2"
solana-program = "1.11.2"
solana-stake-program = "1.11.2"